--- a/_posts/2020-10-22-randi.md
+++ b/_posts/2020-10-22-randi.md
@@ -2,7 +2,7 @@
 layout: post
 title: James Randi Died
 ---
-Randi died. He had a huge influence on my thinking through high school and college and deserves a large part of the responsibility for my interest in theatrical magic. When I decided to start studying magic very seriously, much of my motivation was to understand human psychology better, and particularly the ways in which I could be lead to believe wrong things. While there's no complete innoculation from _being decieved_, it certainly helps to know a whole lot about magic... or... not just to know a whole lot about magic, but to think like a magician. It cannot merely be taught but requires study and practice. You also have to see certain techniques work well to deceive people, almost miraculously, over and over again in order to understand that they do work and begin to understand _how_. Which is why Randi insisted that "a magician" should participate in scientific research when deception was possible. Feynman said that "[t]he first principle is that you must not fool yourself, and you are the easiest person to fool." So now there's always a magician in my laboratory.
+Randi died. He had a huge influence on my thinking through high school and college and deserves a large part of the responsibility for my interest in theatrical magic. When I decided to start studying magic very seriously, much of my motivation was to understand human psychology better, and particularly the ways in which I could be led to believe wrong things. While there's no complete innoculation from _being decieved_, it certainly helps to know a whole lot about magic... or... not just to know a whole lot about magic, but to think like a magician. It cannot merely be taught but requires study and practice. You also have to see certain techniques work well to deceive people, almost miraculously, over and over again in order to understand that they do work and begin to understand _how_. Which is why Randi insisted that "a magician" should participate in scientific research when deception was possible. Feynman said that "[t]he first principle is that you must not fool yourself, and you are the easiest person to fool." So now there's always a magician in my laboratory.
 
 I met Randi at the Magic Castle sometime shortly after I started taking classes there, at a special event in his honor. I think that I was either not yet a member or had only very recently become one. I met DJ Grothe in the audience first, who I'd listened to when he hosted the Center for Inquiry's podcast. He had just moved to Los Angeles, and we discussed his plans to audition for membership. DJ introduced me to Randi. I said, dipshittedly, "I'm a skeptic too!" and Randi said, "I doubt that!" with his eyebrow raised. I must have been visibly confused, maybe a little heartbroken, and he followed up with something like "I have to say that, you see, to maintain my reputation." I shook his hand and thanked him for everything he'd done.
 
